added stateful logic in login.js component, added error message

--- a/water-my-plants/src/Components/Login/Login.css
+++ b/water-my-plants/src/Components/Login/Login.css
@@ -32,7 +32,7 @@ h1.loginHeader {
     font-size: 1.3rem;
 }
 
-.error_container {
+/* .error_container {
 	margin: 5% 3%;
 	padding: 2%;
 	border:2px solid  #EA9494;
@@ -44,4 +44,4 @@ h1.loginHeader {
 
 .error_msg {
 	margin: 0 auto;
-}
+} */
