--- a/water-my-plants/src/App.css
+++ b/water-my-plants/src/App.css
@@ -81,7 +81,8 @@
   box-shadow: 0px 1px 6px -2px rgb(128, 127, 127);
   margin: 16px 8px;
   padding: 8px;
-  background-color: white;
+  background-color: #36a851;
+  color: white;
 }
 .nav-btn {
   display: flex;
@@ -91,7 +92,7 @@
   box-shadow: 0px 1px 6px -2px rgb(128, 127, 127);
   margin: 16px 8px;
   padding: 8px;
-  background-color: white;
+  background-color: rgb(233, 250, 231);
 }
 
 .signupButton {
