working on app.css, cleaned up unnecessary comments and tried to add non-repeating, centered background image but does not render properly. Commented this code and pushed cleaned up code.

--- a/water-my-plants/src/App.css
+++ b/water-my-plants/src/App.css
@@ -1,8 +1,16 @@
+/* Code added for center background image -- not working as expected for now as it 
+/* messes with the divs and does not render properly.
 
+/* html { 
+  background: url('https://images.unsplash.com/photo-1525498128493-380d1990a112?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTd8fHBsYW50fGVufDB8fDB8&ixlib=rb-1.2.1&w=1000&q=80') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+} */
 
 body {
   background-image: url('https://images.unsplash.com/photo-1525498128493-380d1990a112?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTd8fHBsYW50fGVufDB8fDB8&ixlib=rb-1.2.1&w=1000&q=80');
-  /* font-family: 'Amatic SC', cursive; */
 }
 
 h1, h2, h3, h4, h5 {
