--- a/water-my-plants/src/App.css
+++ b/water-my-plants/src/App.css
@@ -1,13 +1,13 @@
-/* Code added for center background image -- not working as expected for now as it 
-/* messes with the divs and does not render properly.
+/* Code added for center background image -- need a higher res image in order for this to look nice. Image gets a little blurry in a larger browser window. */
 
-/* html { 
+/* body { 
   background: url('https://images.unsplash.com/photo-1525498128493-380d1990a112?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTd8fHBsYW50fGVufDB8fDB8&ixlib=rb-1.2.1&w=1000&q=80') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-} */
+  opacity: 75%;
+}  */
 
 body {
   background-image: url('https://images.unsplash.com/photo-1525498128493-380d1990a112?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTd8fHBsYW50fGVufDB8fDB8&ixlib=rb-1.2.1&w=1000&q=80');
