--- a/water-my-plants/src/App.css
+++ b/water-my-plants/src/App.css
@@ -115,19 +115,30 @@ button {
   font-size: 1.3rem;
 }
 
-/* @media all and (max-width: 360px)
+@media all and (max-width: 360px)
 {
-  .home-nav-btn {
-    height: 3rem;
-    width: 7rem;
-    margin: 5px;
-    font-size: 1.50em;
+  .profile-card {
+    border: 2px solid#355e3b;
+    margin: 2% 20% 3% 20%;
+    padding: 2% 2% 4.5% 2%;
   }
 
-  .nav-btn {
-    height: 3rem;
-    width: 7rem;
-    margin: 5px;
-    font-size: 1.50em;
+  .update-user {
+    border-radius: 6px;
+    margin-right: 0%;
+    /* margin: 90px; */
+    padding: 2% 5% 2% 5%;
+    color: black;
+    background-color: #f8e53d
   }
-} */
+
+  .delete {
+    /* margin: -5.5% -3% -10% 80%; */
+    margin-left: 0%;
+    padding: 2% 2% 2% 2%;
+    cursor: pointer;
+    background-color: tomato;
+    color: white;
+    border-radius: 6px;
+  }
+}
